# budget-ha

./: .env.example  .gitignore  CHANGELOG.md  HANDOFF.md  README.md  docker-compose.yml  repository.yaml
backend/: Dockerfile
backend/app/: models.py  schemas.py
backend/app/routers/: ai_import.py  backups.py  debts.py  income.py
backend/app/services/: ai_import.py  common.py  ledger.py  migrations.py  rollover.py  uploads.py
backend/app/tests/: test_api.py
backend/budget_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
budget-tracker/: README.md  config.yaml  run.sh
budget-tracker/app-src/backend/: pyproject.toml
budget-tracker/app-src/backend/app/: config.py  main.py  models.py  money.py  schemas.py
budget-tracker/app-src/backend/app/routers/: ai_import.py  attachments.py  budget_lines.py  categories.py  savings.py  users.py
budget-tracker/app-src/backend/app/services/: ai_import.py  budget_totals.py  migrations.py  rollover.py  serializers.py
budget-tracker/app-src/backend/app/tests/: test_api.py
budget-tracker/app-src/frontend/: Dockerfile  index.html
docs/: codebase_analysis.md  implementation_plan.md  task.md  walkthrough.md
frontend/: package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
home-assistant-addon/: .gitattributes
home-assistant-addon/budget-tracker/: Dockerfile  config.yaml  run.sh
local-ai-import-tester/: index.html
scripts/: package-home-assistant-addon.ps1
(+16 files in other folders)
